tests/snapshots/test_runner__tests__compiler__typecheck__mutually_recursive_function_1__mutually_recursive_function_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo (n: Int): Int = n .bar

let bar (n: Int): String = n .foo
//                         ^^^^^^ Error: expected String, got Int

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/mutually_recursive_function_1/mutually_recursive_function_1.kk:1:25
  │
1 │ let foo (n: Int): Int = n .bar
  │                         ^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Int         | + String    |
    +---------------+-------------+
